Prevent image caption shifting
Before the image tag modified by JS, the caption will shift

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -364,6 +364,17 @@ footer {
   overflow-wrap: break-word;
   word-wrap: break-word;
 
+  @mixin caption {
+    + em {
+      display: block;
+      text-align: center;
+      font-style: normal;
+      font-size: 80%;
+      padding: 0;
+      color: #6d6c6c;
+    }
+  }
+
   img[data-src] {
     margin: 0.5rem 0;
 
@@ -380,6 +391,8 @@ footer {
     &.shadow {
       filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.08));
     }
+
+    @include caption;
 
   }
 
@@ -405,14 +418,7 @@ footer {
     }
 
     &.img-link {
-      + em {
-        display: block;
-        text-align: center;
-        font-style: normal;
-        font-size: 80%;
-        padding: 0;
-        color: #6d6c6c;
-      }
+      @include caption;
     }
 
   } // a
